--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,23 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Reddit image viewer",
   "version": "1.0",
   "description": "Loads reddit images directly instead of referring to the HTML page containing the image.",
   "permissions": [
-    "webRequest",
-    "webRequestBlocking",
+    "declarativeNetRequestWithHostAccess"
+  ],
+  "host_permissions": [
     "*://i.redd.it/*",
     "*://external-preview.redd.it/*",
     "*://preview.redd.it/*"
   ],
-  "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+  "declarative_net_request": {
+    "rule_resources": [
+      {
+        "id": "ruleset",
+        "enabled": true,
+        "path": "rules.json"
+      }
+    ]
   }
 }
